--- a/JS1.css
+++ b/JS1.css
@@ -1,4 +1,12 @@
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>kaktotakoioi</title>
+  <link href="JS1.css" rel="stylesheet">
+</head>
+<body>
+<nav role="navigation">
+<ul>
 <html>
 <head>
 <meta http-equiv="Content-Type"
