Update and rename JS1.css to js1.css

--- a/js1.css
+++ b/js1.css
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>kaktotakoioi</title>
-  <link href="JS1.css" rel="stylesheet">
+  <link href="js1.html" rel="stylesheet">
 </head>
 <body>
 <nav role="navigation">
