--- a/style1.css
+++ b/style1.css
@@ -1,11 +1,3 @@
-@import "compass/css3";
-
-$dia: 6em;
-$incolor: green;
-$outcolor: #fff;
-$bdrwidth: 10px;
-$time: 0.15s;
-
 body {
   font-family: Open Sans;
   font-size: 14px;
@@ -17,26 +9,25 @@ body {
 
 .circ-button {
   display: block;
-  width: $dia;
-  height: $dia;
+  width: 6em;
+  height: 6em;
   font-size: 2em;
   font-weight: 700;
   letter-spacing: .1em;
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
-  color: $outcolor;
-  background: $incolor;
-  border: $bdrwidth dashed $outcolor;
-  border-radius: $dia;
-  padding-top: $dia/2 - 1em;
-  transition: all linear $time;
-  box-shadow: 0 0 20px rgba(0,0,0,0.5);
+  color: #fff;
+  background: green;
+  border: 10px dashed #fff;
+  border-radius: 6em;
+  padding-top: 2em;
+  transition: all linear 0.15s;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   margin: 2em auto;
-  
-  &:hover {
-    background: darken(invert($incolor), 25%);
-    border-color: invert($outcolor);
-    color: invert($outcolor);
-  }
+}
+.circ-button:hover {
+  background: magenta;
+  border-color: black;
+  color: black;
 }
